codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__esc_interrupt_goal_paused_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: snapshot
---
"                                                                                "
" . Nurturing (0s • esc to interrupt)                                            "
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  GPT-5.6-Sol default · /tmp/project                Goal paused (/goal resume)  "
