codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__experimental_features_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Experimental features
  Changes are saved to config.toml and apply to new sessions.

› [ ] JavaScript REPL                           Enable a persistent Node-
                                                backed JavaScript REPL for
                                                interactive website debugging
                                                and other inline JavaScript
                                                execution capabilities.
  [ ] Spine spawn  Concurrent branch agents: 4  Run differentiated Spine
                                                branches concurrently and join
                                                their results. Disabled by
                                                default; changes apply to new
                                                sessions.
  [x] Shell tool                                Allow the model to run shell
                                                commands.

  space toggle  enter save for next session
